content/kapacitor/v1.0/nodes/query_node.md
---
title: QueryNode
note: Auto generated by tickdoc

menu:
  kapacitor_1_0:
    name: Query
    identifier: query_node
    weight: 170
    parent: nodes
---

A [QueryNode](/kapacitor/v1.0/nodes/query_node/) defines a source and a schedule for 
processing batch data. The data is queried from 
an InfluxDB database and then passed into the data pipeline. 

Example: 


```javascript
 batch
     |query('''
         SELECT mean("value")
         FROM "telegraf"."default".cpu_usage_idle
         WHERE "host" = 'serverA'
     ''')
         .period(1m)
         .every(20s)
         .groupBy(time(10s), 'cpu')
     ...
```

In the above example InfluxDB is queried every 20 seconds; the window of time returned 
spans 1 minute and is grouped into 10 second buckets. 


Index
-----

### Properties

-	[Align](/kapacitor/v1.0/nodes/query_node/#align)
-	[Cluster](/kapacitor/v1.0/nodes/query_node/#cluster)
-	[Cron](/kapacitor/v1.0/nodes/query_node/#cron)
-	[Every](/kapacitor/v1.0/nodes/query_node/#every)
-	[Fill](/kapacitor/v1.0/nodes/query_node/#fill)
-	[GroupBy](/kapacitor/v1.0/nodes/query_node/#groupby)
-	[GroupByMeasurement](/kapacitor/v1.0/nodes/query_node/#groupbymeasurement)
-	[Offset](/kapacitor/v1.0/nodes/query_node/#offset)
-	[Period](/kapacitor/v1.0/nodes/query_node/#period)

### Chaining Methods

-	[Alert](/kapacitor/v1.0/nodes/query_node/#alert)
-	[Bottom](/kapacitor/v1.0/nodes/query_node/#bottom)
-	[Combine](/kapacitor/v1.0/nodes/query_node/#combine)
-	[Count](/kapacitor/v1.0/nodes/query_node/#count)
-	[Deadman](/kapacitor/v1.0/nodes/query_node/#deadman)
-	[Default](/kapacitor/v1.0/nodes/query_node/#default)
-	[Delete](/kapacitor/v1.0/nodes/query_node/#delete)
-	[Derivative](/kapacitor/v1.0/nodes/query_node/#derivative)
-	[Difference](/kapacitor/v1.0/nodes/query_node/#difference)
-	[Distinct](/kapacitor/v1.0/nodes/query_node/#distinct)
-	[Elapsed](/kapacitor/v1.0/nodes/query_node/#elapsed)
-	[Eval](/kapacitor/v1.0/nodes/query_node/#eval)
-	[First](/kapacitor/v1.0/nodes/query_node/#first)
-	[Flatten](/kapacitor/v1.0/nodes/query_node/#flatten)
-	[HoltWinters](/kapacitor/v1.0/nodes/query_node/#holtwinters)
-	[HoltWintersWithFit](/kapacitor/v1.0/nodes/query_node/#holtwinterswithfit)
-	[HttpOut](/kapacitor/v1.0/nodes/query_node/#httpout)
-	[InfluxDBOut](/kapacitor/v1.0/nodes/query_node/#influxdbout)
-	[Join](/kapacitor/v1.0/nodes/query_node/#join)
-	[Last](/kapacitor/v1.0/nodes/query_node/#last)
-	[Log](/kapacitor/v1.0/nodes/query_node/#log)
-	[Max](/kapacitor/v1.0/nodes/query_node/#max)
-	[Mean](/kapacitor/v1.0/nodes/query_node/#mean)
-	[Median](/kapacitor/v1.0/nodes/query_node/#median)
-	[Min](/kapacitor/v1.0/nodes/query_node/#min)
-	[Mode](/kapacitor/v1.0/nodes/query_node/#mode)
-	[MovingAverage](/kapacitor/v1.0/nodes/query_node/#movingaverage)
-	[Percentile](/kapacitor/v1.0/nodes/query_node/#percentile)
-	[Sample](/kapacitor/v1.0/nodes/query_node/#sample)
-	[Shift](/kapacitor/v1.0/nodes/query_node/#shift)
-	[Spread](/kapacitor/v1.0/nodes/query_node/#spread)
-	[Stats](/kapacitor/v1.0/nodes/query_node/#stats)
-	[Stddev](/kapacitor/v1.0/nodes/query_node/#stddev)
-	[Sum](/kapacitor/v1.0/nodes/query_node/#sum)
-	[Top](/kapacitor/v1.0/nodes/query_node/#top)
-	[Union](/kapacitor/v1.0/nodes/query_node/#union)
-	[Where](/kapacitor/v1.0/nodes/query_node/#where)
-	[Window](/kapacitor/v1.0/nodes/query_node/#window)

Properties
----------

Property methods modify state on the calling node.
They do not add another node to the pipeline, and always return a reference to the calling node.
Property methods are marked using the `.` operator.


### Align

Align start and stop times for quiries with even boundaries of the [QueryNode.Every](/kapacitor/v1.0/nodes/query_node/#every) property. 
Does not apply if using the [QueryNode.Cron](/kapacitor/v1.0/nodes/query_node/#cron) property. 


```javascript
node.align()
```


### Cluster

The name of a configured InfluxDB cluster. 
If empty the default cluster will be used. 


```javascript
node.cluster(value string)
```


### Cron

Define a schedule using a cron syntax. 

The specific cron implementation is documented here: 
https://github.com/gorhill/cronexpr#implementation 

The Cron property is mutually exclusive with the Every property. 


```javascript
node.cron(value string)
```


### Every

How often to query InfluxDB. 

The Every property is mutually exclusive with the Cron property. 


```javascript
node.every(value time.Duration)
```


### Fill

Fill the data. 
Options are: 

- Any numerical value 
- null - exhibits the same behavior as the default 
- previous - reports the value of the previous window 
- none - suppresses timestamps and values where the value is null 


```javascript
node.fill(value interface{})
```


### GroupBy

Group the data by a set of dimensions. 
Can specify one time dimension. 

This property adds a `GROUP BY` clause to the query 
so all the normal behaviors when quering InfluxDB with a `GROUP BY` apply. 

Use group by time when your period is longer than your group by time interval. 

Example: 


```javascript
    batch
        |query(...)
            .period(1m)
            .every(1m)
            .groupBy(time(10s), 'tag1', 'tag2'))
            .align()
```

A group by time offset is also possible. 

Example: 


```javascript
    batch
        |query(...)
            .period(1m)
            .every(1m)
            .groupBy(time(10s, -5s), 'tag1', 'tag2'))
            .align()
            .offset(5s)
```

It is recommended to use [QueryNode.Align](/kapacitor/v1.0/nodes/query_node/#align) and [QueryNode.Offset](/kapacitor/v1.0/nodes/query_node/#offset) in conjunction with 
group by time dimensions so that the time bounds match up with the group by intervals. 

NOTE: Since [QueryNode.Offset](/kapacitor/v1.0/nodes/query_node/#offset) is inherently a negative property the second &#34;offset&#34; argument to the &#34;time&#34; function is negative to match. 



```javascript
node.groupBy(d ...interface{})
```


### GroupByMeasurement

If set will include the measurement name in the group ID. 
Along with any other group by dimensions. 

Example: 


```javascript
 batch
      |query('SELECT sum("value") FROM "telegraf"."autogen"./process_.*/')
          .groupByMeasurement()
          .groupBy('host')
```

The above example selects data from several measurements matching `/process_.*/ and 
then each point is grouped by the host tag and measurement name. 
Thus keeping measurements in their own groups. 


```javascript
node.groupByMeasurement()
```


### Offset

How far back in time to query from the current time 

For example an Offest of 2 hours and an Every of 5m, 
Kapacitor will query InfluxDB every 5 minutes for the window of data 2 hours ago. 

This applies to Cron schedules as well. If the cron specifies to run every Sunday at 
1 AM and the Offset is 1 hour. Then at 1 AM on Sunday the data from 12 AM will be queried. 


```javascript
node.offset(value time.Duration)
```


### Period

The period or length of time that will be queried from InfluxDB 


```javascript
node.period(value time.Duration)
```


Chaining Methods
----------------

Chaining methods create a new node in the pipeline as a child of the calling node.
They do not modify the calling node.
Chaining methods are marked using the `|` operator.


### Alert

Create an alert node, which can trigger alerts. 


```javascript
node|alert()
```

Returns: [AlertNode](/kapacitor/v1.0/nodes/alert_node/)


### Bottom

Select the bottom `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|bottom(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Combine

Combine this node with itself. The data are combined on timestamp. 


```javascript
node|combine(expressions ...ast.LambdaNode)
```

Returns: [CombineNode](/kapacitor/v1.0/nodes/combine_node/)


### Count

Count the number of points. 


```javascript
node|count(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Deadman

Helper function for creating an alert on low throughput, a.k.a. deadman&#39;s switch. 

- Threshold -- trigger alert if throughput drops below threshold in points/interval. 
- Interval -- how often to check the throughput. 
- Expressions -- optional list of expressions to also evaluate. Useful for time of day alerting. 

Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
    //Do normal processing of data
    data...
```

The above is equivalent to this 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |stats(10s)
            .align()
        |derivative('emitted')
            .unit(10s)
            .nonNegative()
        |alert()
            .id('node \'stream0\' in task \'{{ .TaskName }}\'')
            .message('{{ .ID }} is {{ if eq .Level "OK" }}alive{{ else }}dead{{ end }}: {{ index .Fields "emitted" | printf "%0.3f" }} points/10s.')
            .crit(lambda: "emitted" <= 100.0)
    //Do normal processing of data
    data...
```

The `id` and `message` alert properties can be configured globally via the &#39;deadman&#39; configuration section. 

Since the [AlertNode](/kapacitor/v1.0/nodes/alert_node/) is the last piece it can be further modified as usual. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    data
        |deadman(100.0, 10s)
            .slack()
            .channel('#dead_tasks')
    //Do normal processing of data
    data...
```

You can specify additional lambda expressions to further constrain when the deadman&#39;s switch is triggered. 
Example: 


```javascript
    var data = stream
        |from()...
    // Trigger critical alert if the throughput drops below 100 points per 10s and checked every 10s.
    // Only trigger the alert if the time of day is between 8am-5pm.
    data
        |deadman(100.0, 10s, lambda: hour("time") >= 8 AND hour("time") <= 17)
    //Do normal processing of data
    data...
```



```javascript
node|deadman(threshold float64, interval time.Duration, expr ...ast.LambdaNode)
```

Returns: [AlertNode](/kapacitor/v1.0/nodes/alert_node/)


### Default

Create a node that can set defaults for missing tags or fields. 


```javascript
node|default()
```

Returns: [DefaultNode](/kapacitor/v1.0/nodes/default_node/)


### Delete

Create a node that can delete tags or fields. 


```javascript
node|delete()
```

Returns: [DeleteNode](/kapacitor/v1.0/nodes/delete_node/)


### Derivative

Create a new node that computes the derivative of adjacent points. 


```javascript
node|derivative(field string)
```

Returns: [DerivativeNode](/kapacitor/v1.0/nodes/derivative_node/)


### Difference

Compute the difference between points independent of elapsed time. 


```javascript
node|difference(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Distinct

Produce batch of only the distinct points. 


```javascript
node|distinct(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Elapsed

Compute the elapsed time between points 


```javascript
node|elapsed(field string, unit time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Eval

Create an eval node that will evaluate the given transformation function to each data point. 
A list of expressions may be provided and will be evaluated in the order they are given. 
The results are available to later expressions. 


```javascript
node|eval(expressions ...ast.LambdaNode)
```

Returns: [EvalNode](/kapacitor/v1.0/nodes/eval_node/)


### First

Select the first point. 


```javascript
node|first(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Flatten

Flatten points with similar times into a single point. 


```javascript
node|flatten()
```

Returns: [FlattenNode](/kapacitor/v1.0/nodes/flatten_node/)


### HoltWinters

Compute the holt-winters forecast of a data set. 


```javascript
node|holtWinters(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### HoltWintersWithFit

Compute the holt-winters forecast of a data set. 
This method also outputs all the points used to fit the data in addition to the forecasted data. 


```javascript
node|holtWintersWithFit(field string, h int64, m int64, interval time.Duration)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### HttpOut

Create an HTTP output node that caches the most recent data it has received. 
The cached data are available at the given endpoint. 
The endpoint is the relative path from the API endpoint of the running task. 
For example, if the task endpoint is at `/kapacitor/v1/tasks/&lt;task_id&gt;` and endpoint is 
`top10`, then the data can be requested from `/kapacitor/v1/tasks/&lt;task_id&gt;/top10`. 


```javascript
node|httpOut(endpoint string)
```

Returns: [HTTPOutNode](/kapacitor/v1.0/nodes/http_out_node/)


### InfluxDBOut

Create an influxdb output node that will store the incoming data into InfluxDB. 


```javascript
node|influxDBOut()
```

Returns: [InfluxDBOutNode](/kapacitor/v1.0/nodes/influx_d_b_out_node/)


### Join

Join this node with other nodes. The data are joined on timestamp. 


```javascript
node|join(others ...Node)
```

Returns: [JoinNode](/kapacitor/v1.0/nodes/join_node/)


### Last

Select the last point. 


```javascript
node|last(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Log

Create a node that logs all data it receives. 


```javascript
node|log()
```

Returns: [LogNode](/kapacitor/v1.0/nodes/log_node/)


### Max

Select the maximum point. 


```javascript
node|max(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Mean

Compute the mean of the data. 


```javascript
node|mean(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Median

Compute the median of the data. Note, this method is not a selector, 
if you want the median point use `.percentile(field, 50.0)`. 


```javascript
node|median(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Min

Select the minimum point. 


```javascript
node|min(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Mode

Compute the mode of the data. 


```javascript
node|mode(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### MovingAverage

Compute a moving average of the last window points. 
No points are emitted until the window is full. 


```javascript
node|movingAverage(field string, window int64)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Percentile

Select a point at the given percentile. This is a selector function, no interpolation between points is performed. 


```javascript
node|percentile(field string, percentile float64)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Sample

Create a new node that samples the incoming points or batches. 

One point will be emitted every count or duration specified. 


```javascript
node|sample(rate interface{})
```

Returns: [SampleNode](/kapacitor/v1.0/nodes/sample_node/)


### Shift

Create a new node that shifts the incoming points or batches in time. 


```javascript
node|shift(shift time.Duration)
```

Returns: [ShiftNode](/kapacitor/v1.0/nodes/shift_node/)


### Spread

Compute the difference between `min` and `max` points. 


```javascript
node|spread(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Stats

Create a new stream of data that contains the internal statistics of the node. 
The interval represents how often to emit the statistics based on real time. 
This means the interval time is independent of the times of the data points the source node is receiving. 


```javascript
node|stats(interval time.Duration)
```

Returns: [StatsNode](/kapacitor/v1.0/nodes/stats_node/)


### Stddev

Compute the standard deviation. 


```javascript
node|stddev(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Sum

Compute the sum of all values. 


```javascript
node|sum(field string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Top

Select the top `num` points for `field` and sort by any extra tags or fields. 


```javascript
node|top(num int64, field string, fieldsAndTags ...string)
```

Returns: [InfluxQLNode](/kapacitor/v1.0/nodes/influx_q_l_node/)


### Union

Perform the union of this node and all other given nodes. 


```javascript
node|union(node ...Node)
```

Returns: [UnionNode](/kapacitor/v1.0/nodes/union_node/)


### Where

Create a new node that filters the data stream by a given expression. 


```javascript
node|where(expression ast.LambdaNode)
```

Returns: [WhereNode](/kapacitor/v1.0/nodes/where_node/)


### Window

Create a new node that windows the stream by time. 

NOTE: Window can only be applied to stream edges. 


```javascript
node|window()
```

Returns: [WindowNode](/kapacitor/v1.0/nodes/window_node/)

